some vscode settings

--- a/Arduino/.vscode/settings.json
+++ b/Arduino/.vscode/settings.json
@@ -8,5 +8,6 @@
         "chrono": "cpp",
         "variant": "cpp",
         "__locale": "cpp"
-    }
+    },
+    "cmake.configureOnOpen": false
 }
