--- a/MacOS/Podfile
+++ b/MacOS/Podfile
@@ -16,3 +16,12 @@ target 'EmberTests' do
   pod 'Nimble'
 
 end
+
+### Post install script
+post_install do |pi|
+   pi.pods_project.targets.each do |t|
+       t.build_configurations.each do |bc|
+           bc.build_settings['MACOSX_DEPLOYMENT_TARGET'] = '10.15'
+       end
+   end
+end
